erDiagram
    USERS {
        int id PK
        string email UK
        string password
        string first_name
        string last_name
        datetime created_at
        datetime updated_at
    }
    
    GROUPS {
        int id PK
        string name
        string description
        int admin_id FK
        string invite_code UK
        datetime created_at
        datetime updated_at
    }
    
    GROUP_MEMBERS {
        int id PK
        int group_id FK
        int user_id FK
        datetime joined_at
        boolean is_active
    }
    
    TASKS {
        int id PK
        string title
        text description
        int group_id FK
        int assigned_by FK
        int assigned_to FK
        string status
        string priority
        datetime due_date
        datetime created_at
        datetime updated_at
        datetime completed_at
    }
    
    TASK_COMMENTS {
        int id PK
        int task_id FK
        int user_id FK
        text comment
        datetime created_at
    }
    
    INVITATIONS {
        int id PK
        int group_id FK
        int invited_by FK
        string email
        string status
        string token UK
        datetime expires_at
        datetime created_at
        datetime accepted_at
    }

    USERS ||--o{ GROUPS : "administra"
    USERS ||--o{ GROUP_MEMBERS : "pertenece"
    GROUPS ||--o{ GROUP_MEMBERS : "contiene"
    GROUPS ||--o{ TASKS : "tiene"
    USERS ||--o{ TASKS : "asigna (assigned_by)"
    USERS ||--o{ TASKS : "recibe (assigned_to)"
    TASKS ||--o{ TASK_COMMENTS : "tiene"
    USERS ||--o{ TASK_COMMENTS : "escribe"
    GROUPS ||--o{ INVITATIONS : "genera"
    USERS ||--o{ INVITATIONS : "envía"